--- a/index.html
+++ b/index.html
@@ -10,26 +10,27 @@
         integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="CSS/style.css" rel="stylesheet">
+    <link href="CSS/form.css" rel="stylesheet">
     <script defer src="JS/script.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;1,700&display=swap" rel="stylesheet">
 </head>
 
-<body clss="body">
+<body class="body">
     <header>
         <h1>Lista zadań</h1>
     </header>
-    <form>
-        <container class="container">
-            <h2>Dodaj nowe zadanie</h2>
-            <form>
-                <p>
-                    <label>
-                        <input name="name"> Dodaj zadanie
-                    </label>
-                </p>
-            </form>
-        </container>
+    <form class="form js-form">
+        <legend class="form__legend">Dodaj nowe zadanie</legend>
+        <p class="form__element">
+            <label>
+                <input class="form__field js-newTask" name="name" placeholder="Co jest do zrobienia?" autofocus>
+                <button class="form__button">Dodaj zadanie</button>
+            </label>
+        </p>
     </form>
+    <p class="ToDoList">Lista zadań</p>
+    <ul class="js-tasks"></ul>
+
 </body>
 
 </html>
