Added new styles to improve the look

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </p>
     </form>
     <container class="list">
-        <h2 class="list__header">Lista zadań</h2>
+        <p class="list__header">Lista zadań</p>
         <div class="list__taskList">
             <ul class="js-tasks list__taskList--modifier"></ul>
         </div>
