--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link href="CSS/form.css" rel="stylesheet">
     <link href="CSS/section.css" rel="stylesheet">
     <link href="CSS/tasks.css" rel="stylesheet">
+    <link href="CSS/buttons.css" rel="stylesheet">
     <script defer src="JS/script.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;1,700&display=swap" rel="stylesheet">
 </head>
@@ -34,7 +35,10 @@
             </div>
         </section>
         <section class="section">
-            <h2 class="section__header">Lista zadań</h2>
+            <header class="section__header">
+                <h2 class="section__tittle">Lista zadań</h2>
+                <div class="buttons js-buttons"></div>
+            </header>
             <div class="section__body">
                 <ul class="tasks js-tasks"></ul>
             </div>
